<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="T_GRR" Id="{4c52fe16-42bd-438e-8711-f613815f983f}">
    <Declaration><![CDATA[TYPE T_GRR :
STRUCT
	io:		T_GRR_IO;
	ctrl:	T_GRR_CTRL;
	id:		T_GRR_ID;
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>